[gd_scene load_steps=12 format=3 uid="uid://dh2sk2i2wd25d"]

[ext_resource type="Script" path="res://Main Scenes/menu/select_difficulty.gd" id="1_o6r68"]
[ext_resource type="StyleBox" uid="uid://esy5gfotjiq4" path="res://Main Scenes/menu/menu_button_normal.tres" id="2_40sop"]
[ext_resource type="Shader" path="res://Main Scenes/menu/game_area_scroll.gdshader" id="2_ujtg5"]
[ext_resource type="Texture2D" uid="uid://cpfd7nprdbuc7" path="res://Resources/bowling_placeholder_background.png" id="3_5fl4f"]
[ext_resource type="StyleBox" uid="uid://bkvenev8asqbw" path="res://Main Scenes/menu/menu_button_hover.tres" id="3_pm2ow"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sorqi"]
shader = ExtResource("2_ujtg5")

[sub_resource type="SystemFont" id="SystemFont_kgqgf"]
font_names = PackedStringArray("Arial Rounded MT")

[sub_resource type="LabelSettings" id="LabelSettings_q2lcg"]
font_size = 48

[sub_resource type="SystemFont" id="SystemFont_dkf1j"]
font_names = PackedStringArray("Arial Rounded MT")

[sub_resource type="SystemFont" id="SystemFont_nry5d"]
font_names = PackedStringArray("Arial Rounded MT")

[sub_resource type="SystemFont" id="SystemFont_c42r2"]
font_names = PackedStringArray("Arial Rounded MT")

[node name="SelectDifficulty" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o6r68")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_sorqi")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5fl4f")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.5
offset_top = 219.0
offset_right = 179.5
offset_bottom = 286.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_kgqgf")
text = "Select Difficulty"
label_settings = SubResource("LabelSettings_q2lcg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -20.0
offset_right = 154.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Easy" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dkf1j")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("2_40sop")
theme_override_styles/hover = ExtResource("3_pm2ow")
theme_override_styles/pressed = ExtResource("2_40sop")
theme_override_styles/normal = ExtResource("2_40sop")
text = "Easy"

[node name="Medium" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nry5d")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("2_40sop")
theme_override_styles/hover = ExtResource("3_pm2ow")
theme_override_styles/pressed = ExtResource("2_40sop")
theme_override_styles/normal = ExtResource("2_40sop")
text = "Normal"

[node name="Hard" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_c42r2")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("2_40sop")
theme_override_styles/hover = ExtResource("3_pm2ow")
theme_override_styles/pressed = ExtResource("2_40sop")
theme_override_styles/normal = ExtResource("2_40sop")
text = "Hard
"

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 243.0
offset_right = 46.0
offset_bottom = 283.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("SystemFont_c42r2")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("2_40sop")
theme_override_styles/hover = ExtResource("3_pm2ow")
theme_override_styles/pressed = ExtResource("2_40sop")
theme_override_styles/normal = ExtResource("2_40sop")
text = "Back"

[connection signal="pressed" from="HBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="HBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="HBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
